--- a/style.css
+++ b/style.css
@@ -39,16 +39,119 @@ img {
 }
 
 .container {
-  min-height: 100vh;
+  height: 100vh;
   display: grid;
   place-items: center;
 }
 
 .card {
   background-color: white;
-  width: 40%;
-  height: 85%;
-  border: 2px solid red;
-  border-radius: 1.25rem;
+  width: 45%;
+  height: 90%;
+  overflow: scroll;
+  border-radius: 1rem;
   box-shadow: 3px 5px 15px var(--light-grayish-blue);
+  padding: 0.75rem 1.25rem;
+}
+
+.card__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__count {
+  margin-left: .75rem;
+  font-size: .75em;
+  background-color: var(--blue);
+  color: white;
+  border-radius: 5px;
+  padding: .1rem .7rem;
+}
+
+.card__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.card__list__item {
+  display: flex;
+  align-items: center;
+  border-radius: .5rem;
+  margin-bottom: 0.5rem;
+  padding: 1rem;
+}
+
+.card__list__item img {
+  width: 45px;
+  align-self: flex-start;
+  cursor: pointer;
+}
+
+.data {
+  width: 100%;
+  margin-left: 1rem;
+}
+
+.main-data span {
+  margin-right: .3rem;
+}
+
+.main-data {
+  margin: 0;
+  margin-bottom: .3rem;
+}
+
+.name, .subject {
+  font-weight: var(--bold-font);
+}
+
+.picture {
+  filter: grayscale(0.5);
+  transition: 0.3s;
+}
+
+.picture:hover {
+  filter: grayscale(0);
+}
+
+.action, .subject, .header__btn, .message {
+  color: var(--dark-grayish-blue);
+}
+
+.time {
+  color: var(--grayish-blue);
+}
+
+.message {
+  padding: 1rem;
+  border: 2px solid var(--light-grayish-blue);
+  border-radius: 5px;
+  margin: 0;
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.message:hover {
+  background-color: var(--light-grayish-blue-second);
+}
+
+.unread {
+  background-color: var(--very-light-grayish-blue);
+  position: relative;
+}
+
+.unread::after {
+  content: "🔴";
+  font-size: 0.5rem;
+  position: absolute;
+  top: .5rem;
+  right: .5rem;
+}
+
+.name:hover, .subject:hover, .header__btn:hover {
+  color: var(--blue);
+  cursor: pointer;
 }
