--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ img {
   max-width: 100%;
 }
 
+.flex {
+  display: flex;
+  align-items: center;
+}
+
 .container {
   height: 100vh;
   display: grid;
@@ -46,27 +51,59 @@ img {
 
 .card {
   background-color: white;
-  width: 45%;
+  width: 700px;
   height: 90%;
   overflow: scroll;
+  scrollbar-width: none;
   border-radius: 1rem;
   box-shadow: 3px 5px 15px var(--light-grayish-blue);
   padding: 0.75rem 1.25rem;
+}
+
+/* removing scrollbar appearance in webkit browsers */
+
+.card::-webkit-scrollbar {
+  display: none;
+}
+
+/* ------------------------------------ */
+
+@media (max-width: 750px) {
+  .card {
+    width: 95%;
+    height: 95%;
+  }
+}
+
+@media (max-width: 550px) {
+  html {
+    font-size: 14px;
+  }
+  .card {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .card__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1.5rem 0;
+}
+
+.card__header h2,
+.card__header p {
+  margin: 0;
 }
 
 .header__count {
-  margin-left: .75rem;
-  font-size: .75em;
+  margin-left: 0.75rem;
+  font-size: 0.8rem;
   background-color: var(--blue);
   color: white;
   border-radius: 5px;
-  padding: .1rem .7rem;
+  padding: 0.2rem 0.7rem;
 }
 
 .card__list {
@@ -78,7 +115,7 @@ img {
 .card__list__item {
   display: flex;
   align-items: center;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   margin-bottom: 0.5rem;
   padding: 1rem;
 }
@@ -95,15 +132,16 @@ img {
 }
 
 .main-data span {
-  margin-right: .3rem;
+  margin-right: 0.3rem;
 }
 
 .main-data {
   margin: 0;
-  margin-bottom: .3rem;
+  margin-bottom: 0.3rem;
 }
 
-.name, .subject {
+.name,
+.subject {
   font-weight: var(--bold-font);
 }
 
@@ -116,7 +154,10 @@ img {
   filter: grayscale(0);
 }
 
-.action, .subject, .header__btn, .message {
+.action,
+.subject,
+.header__btn,
+.message {
   color: var(--dark-grayish-blue);
 }
 
@@ -135,7 +176,7 @@ img {
 }
 
 .message:hover {
-  background-color: var(--light-grayish-blue-second);
+  background-color: var(--light-grayish-blue);
 }
 
 .unread {
@@ -147,11 +188,13 @@ img {
   content: "🔴";
   font-size: 0.5rem;
   position: absolute;
-  top: .5rem;
-  right: .5rem;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 
-.name:hover, .subject:hover, .header__btn:hover {
+.name:hover,
+.subject:hover,
+.header__btn:hover {
   color: var(--blue);
   cursor: pointer;
 }
